--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>volog</title>
     <link href="http://at.alicdn.com/t/font_2681988_wtohwf1g6xp.css" rel="stylesheet"></link>
    <!-- 引入样式 -->
-    <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" rel="stylesheet">
    <!-- 引入组件库 -->
-   <!-- <script src="https://unpkg.com/element-ui/lib/index.js"></script> -->
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"></script>
   </head>
   <body>
     <div id="app"></div>
